# interview-Ai

./: .env.local.example  .gitignore  README.md  docker-compose.yml  fix_aschild.py  fix_nativebutton.py  next.config.ts  package-lock.json  package.json  test_socket.js  tsconfig.json  vercel.json
backend/: README.md  docker-compose.yml
backend/services/transcription/: .dockerignore  .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt  test_api.py  test_nvidia.py
backend/services/transcription/app/: config.py  logger.py  main.py  metrics.py
backend/services/transcription/app/agent/: coach_agent.py  seed_questions.py
backend/services/transcription/app/answer/: __init__.py  context_builder.py  engine.py  models.py  nvidia_client.py  question_detector.py  token_utils.py
backend/services/transcription/app/audio/: exceptions.py  preprocessor.py
backend/services/transcription/app/docs/: cache_manager.py  exceptions.py  extractor.py  processor.py  utils.py
backend/services/transcription/app/lib/: supabase.py
backend/services/transcription/app/transcription/: circuit_breaker.py  deepgram_client.py  engine.py  exceptions.py  groq_client.py  models.py  whisper_client.py
backend/services/transcription/app/webhooks/: document_webhook.py
backend/services/transcription/app/workers/: transcription_worker.py
backend/services/transcription/tests/: test_answer_engine.py  test_cache_manager.py  test_circuit_breaker.py  test_document_extractor.py  test_nvidia_client.py  test_preprocessor.py
docs/: GOOGLE_OAUTH_SETUP.md  WEBHOOK_SETUP.md
(+164 files in other folders)
