[tool.poetry]
name = "interview-ai-transcription"
version = "0.1.0"
description = "Transcription Microservice for Interview AI"
authors = ["Your Name <you@example.com>"]
python = "^3.11"

[tool.poetry.dependencies]
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
openai = "^1.35.0"
deepgram-sdk = "^3.2.7"
aioredis = "^2.0.1"
librosa = "^0.10.2"
soundfile = "^0.12.1"
numpy = "^1.26.4"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.1"
structlog = "^24.2.0"
httpx = "^0.27.0"
tenacity = "^8.3.0"
tiktoken = ">=0.7.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
